Comment : Edit some comments
Edit columns  comments

--- a/app2.ipynb
+++ b/app2.ipynb
@@ -15,6 +15,7 @@
     "- `block` - 주택이 위치한 블록\n",
     "- `street` - 주택이 위치한 거리\n",
     "- `storey_range` - 주택이 위치한 층 범위\n",
+    "- `area_sqm\t` - 주택의 면적\n",
     "- `flat_model` - 주택의 모델(구조, 방 배치 등)\n",
     "- `commence_date` - 주택이 판매에 올라온 날짜\n",
     "- `price` - 판매 가격 (목표 변수)\n",
